{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 52,
  "lineage": "28c152e0-a60f-2e73-d533-02d7eb0dac37",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/regions/us-central1/networkEndpointGroups/gcp3-https-lb-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-22T19:00:23.568-08:00",
            "enable_cdn": false,
            "fingerprint": "0Z2lhHynLv4=",
            "generated_id": 6930864779625978536,
            "id": "projects/plasma-moment-484922-t5/global/backendServices/gcp3-https-lb-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "gcp3-https-lb-backend",
            "port_name": "http",
            "project": "plasma-moment-484922-t5",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/backendServices/gcp3-https-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.web",
            "google_compute_region_network_endpoint_group.cloudrun_neg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-20T21:31:42.207-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/plasma-moment-484922-t5/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "priority": 1000,
            "project": "plasma-moment-484922-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.8.171.155",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-01-22T19:00:23.476-08:00",
            "id": "projects/plasma-moment-484922-t5/global/addresses/gcp3-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "gcp3-lb-ip",
            "prefix_length": 0,
            "project": "plasma-moment-484922-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/addresses/gcp3-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_service_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.62.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-01-22T17:06:48.487-08:00",
            "id": "projects/plasma-moment-484922-t5/global/addresses/private-service-range",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-service-range",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "prefix_length": 16,
            "project": "plasma-moment-484922-t5",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/addresses/private-service-range"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "lb_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/plasma-moment-484922-t5/global/forwardingRules/gcp3-https-lb-fwd-rule",
            "ip_address": "34.8.171.155",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "gcp3-https-lb-fwd-rule",
            "port_range": "443-443",
            "project": "plasma-moment-484922-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/forwardingRules/gcp3-https-lb-fwd-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/targetHttpsProxies/gcp3-https-lb-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.web",
            "google_compute_backend_service.lb_backend",
            "google_compute_global_address.lb_ip",
            "google_compute_managed_ssl_certificate.lb_cert",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_target_https_proxy.lb_https_proxy",
            "google_compute_url_map.lb_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "mtu": 0,
            "name": "prod-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8183181345109695068",
            "project": "plasma-moment-484922-t5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T21:31:42.400-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/plasma-moment-484922-t5/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "project": "plasma-moment-484922-t5",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/regions/us-central1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "plasma-moment-484922-t5/us-central1/nat-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "plasma-moment-484922-t5",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T21:31:43.451-08:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/private-app-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "private-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "plasma-moment-484922-t5",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/private-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T21:31:42.474-08:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/private-data-subnet",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "private-data-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "plasma-moment-484922-t5",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/private-data-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-20T21:31:42.535-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/public-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/networks/prod-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "plasma-moment-484922-t5",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/regions/us-central1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "lb_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-22T19:01:28.439-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/plasma-moment-484922-t5/global/targetHttpsProxies/gcp3-https-lb-https-proxy",
            "name": "gcp3-https-lb-https-proxy",
            "project": "plasma-moment-484922-t5",
            "proxy_bind": false,
            "proxy_id": 3187886693392800359,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/targetHttpsProxies/gcp3-https-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/sslCertificates/gcp3-https-lb-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/urlMaps/gcp3-https-lb-url-map"
          },
          "dependencies": [
            "google_cloud_run_service.web",
            "google_compute_backend_service.lb_backend",
            "google_compute_managed_ssl_certificate.lb_cert",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_url_map.lb_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "lb_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-22T19:01:17.236-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/backendServices/gcp3-https-lb-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zRJgqYGAJ2Y=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/plasma-moment-484922-t5/global/urlMaps/gcp3-https-lb-url-map",
            "map_id": 7951170329926130324,
            "name": "gcp3-https-lb-url-map",
            "path_matcher": [],
            "project": "plasma-moment-484922-t5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/plasma-moment-484922-t5/global/urlMaps/gcp3-https-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.web",
            "google_compute_backend_service.lb_backend",
            "google_compute_region_network_endpoint_group.cloudrun_neg"
          ]
        }
      ]
    }
  ]
}